--- a/★★★★★/Base.lproj/Main.storyboard
+++ b/★★★★★/Base.lproj/Main.storyboard
@@ -134,7 +134,7 @@
                                 </connections>
                             </button>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstAttribute="trailingMargin" secondItem="KdY-Fk-Zwe" secondAttribute="trailing" constant="20" id="7qQ-dX-fQE"/>
                             <constraint firstItem="c7o-F4-xy5" firstAttribute="top" secondItem="KdY-Fk-Zwe" secondAttribute="bottom" constant="20" id="F5M-Sg-JUa"/>
