--- a/★★★★★/Base.lproj/Main.storyboard
+++ b/★★★★★/Base.lproj/Main.storyboard
@@ -237,16 +237,62 @@
                                             <action selector="logout:" destination="2tp-V0-mOd" eventType="touchUpInside" id="qyn-H9-r1I"/>
                                         </connections>
                                     </button>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="FNe-wg-rrU">
+                                        <rect key="frame" x="49" y="500" width="245" height="50"/>
+                                        <subviews>
+                                            <button opaque="NO" tag="201" contentMode="scaleToFill" horizontalHuggingPriority="249" restorationIdentifier="1" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="T9F-hS-YGf">
+                                                <rect key="frame" x="0.0" y="0.0" width="49" height="50"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="55"/>
+                                                <state key="normal">
+                                                    <color key="titleColor" red="0.28235294119999998" green="0.2666666667" blue="0.29411764709999999" alpha="1" colorSpace="calibratedRGB"/>
+                                                </state>
+                                            </button>
+                                            <button opaque="NO" tag="202" contentMode="scaleToFill" restorationIdentifier="2" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MSI-zn-aNC">
+                                                <rect key="frame" x="49" y="0.0" width="49" height="50"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="55"/>
+                                                <state key="normal">
+                                                    <color key="titleColor" red="0.28235294119999998" green="0.2666666667" blue="0.29411764709999999" alpha="1" colorSpace="calibratedRGB"/>
+                                                </state>
+                                            </button>
+                                            <button opaque="NO" tag="203" contentMode="scaleToFill" restorationIdentifier="3" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GyJ-F1-fZv">
+                                                <rect key="frame" x="98" y="0.0" width="49" height="50"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="55"/>
+                                                <state key="normal">
+                                                    <color key="titleColor" red="0.28235294119999998" green="0.2666666667" blue="0.29411764709999999" alpha="1" colorSpace="calibratedRGB"/>
+                                                </state>
+                                            </button>
+                                            <button opaque="NO" tag="204" contentMode="scaleToFill" restorationIdentifier="4" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LTy-S6-jPp">
+                                                <rect key="frame" x="147" y="0.0" width="49" height="50"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="55"/>
+                                                <state key="normal">
+                                                    <color key="titleColor" red="0.28235294119999998" green="0.2666666667" blue="0.29411764709999999" alpha="1" colorSpace="calibratedRGB"/>
+                                                </state>
+                                            </button>
+                                            <button opaque="NO" tag="205" contentMode="scaleToFill" restorationIdentifier="5" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tx5-eT-VTJ">
+                                                <rect key="frame" x="196" y="0.0" width="49" height="50"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="55"/>
+                                                <state key="normal">
+                                                    <color key="titleColor" red="0.28235294119999998" green="0.2666666667" blue="0.29411764709999999" alpha="1" colorSpace="calibratedRGB"/>
+                                                </state>
+                                            </button>
+                                        </subviews>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="50" id="ATf-zR-3sh"/>
+                                            <constraint firstAttribute="width" constant="245" id="nEg-B5-yZH"/>
+                                        </constraints>
+                                    </stackView>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="0.80000000000000004" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstItem="7jj-a1-l7Y" firstAttribute="top" secondItem="Jbb-Nd-sic" secondAttribute="bottom" constant="20" id="0K9-AF-N2O"/>
                                     <constraint firstItem="Jbb-Nd-sic" firstAttribute="centerX" secondItem="mnC-0O-VHk" secondAttribute="centerX" id="H9d-aJ-mol"/>
                                     <constraint firstAttribute="trailing" secondItem="Z2m-B3-Yal" secondAttribute="trailing" id="Inh-P4-Gb6"/>
+                                    <constraint firstItem="FNe-wg-rrU" firstAttribute="top" secondItem="7jj-a1-l7Y" secondAttribute="bottom" constant="10" id="N58-S4-bEd"/>
                                     <constraint firstItem="Jbb-Nd-sic" firstAttribute="top" secondItem="Z2m-B3-Yal" secondAttribute="bottom" constant="30" id="VXH-Kc-glS"/>
                                     <constraint firstItem="7jj-a1-l7Y" firstAttribute="centerX" secondItem="mnC-0O-VHk" secondAttribute="centerX" id="ah4-Lx-bsD"/>
                                     <constraint firstItem="Z2m-B3-Yal" firstAttribute="leading" secondItem="mnC-0O-VHk" secondAttribute="leading" id="frb-th-WnR"/>
                                     <constraint firstItem="Jbb-Nd-sic" firstAttribute="centerY" secondItem="mnC-0O-VHk" secondAttribute="centerY" id="pKh-vx-oqN"/>
+                                    <constraint firstItem="FNe-wg-rrU" firstAttribute="centerX" secondItem="mnC-0O-VHk" secondAttribute="centerX" id="vaa-DE-qoI"/>
                                 </constraints>
                             </view>
                         </subviews>
@@ -263,6 +309,11 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="b1" destination="T9F-hS-YGf" id="fi2-xp-m0O"/>
+                        <outlet property="b2" destination="MSI-zn-aNC" id="Npn-iD-mNg"/>
+                        <outlet property="b3" destination="GyJ-F1-fZv" id="YVn-V5-swC"/>
+                        <outlet property="b4" destination="LTy-S6-jPp" id="eRx-jB-PAB"/>
+                        <outlet property="b5" destination="tx5-eT-VTJ" id="dX0-Lg-9d7"/>
                         <outlet property="backgroundImage" destination="BaA-dq-OG4" id="J6v-h5-8vc"/>
                         <outlet property="backgroundView" destination="mnC-0O-VHk" id="Qo4-1m-0OF"/>
                         <outlet property="imageView" destination="Jbb-Nd-sic" id="f2J-H8-HqN"/>
